chore(ci): stabilize checks and indexes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           globs: |
             **/*.md
+            !**/_import/**
+            !**/_inbox/**
             !**/.agentes.LOCAL_BACKUP/**
 
   link-check:
