--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run gitleaks
         uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: --config .gitleaks.toml
 
